--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ margin :0;
   </a>
 </div>
 <p class="img1" >
-<img src="D:\bootstrap\web project\1.jpg" height="646px" width="100%">
+<img src="D:/bootstrap/web project/1.jpg" height="646px" width="100%">
 </p>
 
 
